--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = IR UW26 15082480, 61528703,uci-id3
+USERAGENT = IR UW26 15082480, 61528703,24282816
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
