changed user agent

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = DEFAULT AGENT
+USERAGENT = IR UW26 15082480, 61528703, 24282816, 26671659
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
